assets/memoryTips.css
/* General */
body {
    background-color: #f7f7f8
}

.container-fluid {
    padding: 0 !important;
    margin: 0 !important;
}

h1,
h2,
h3 {
    text-align: center;
    font-family: 'Lusitana', serif;
    padding: 0;
    margin: 0;
}

h1 {
    font-size: 3.2rem;
    font-weight: 600;
    color: #000;
    padding-top: 15px;
}

h2 {
    font-size: 3rem;
    text-shadow: -1px -1px 2px #000, 1px -1px 2px #000, -1px 1px 2px #000, 1px 1px 2px #000;
}

.h2 {
    font-size: 3rem !important;
    text-shadow: -1px -1px 2px #000, 1px -1px 2px #000, -1px 1px 2px #000, 1px 1px 2px #000;
    text-align: center !important;
    font-family: 'Lusitana', serif !important;
    padding: 0;
    margin: 0;
}

h3 {
    font-size: 2.8rem;
    padding-top: 10px;
    padding-bottom: 5px;
    color: #000;
}

p {
    font-size: 1.6rem;
    padding-left: 10px;
    padding-right: 10px;
    padding-top: 10px;
    font-family: 'Source Serif 4', sans-serif;
    font-weight: 300;
    color: #000;
}

#number-stat {
    font-weight: 600;
    font-size: 1.6rem;
    overflow-wrap: break-word;
}

li {
    font-size: 1.6rem;
    padding-left: 10px;
    padding-right: 10px;
    padding-top: 10px;
    font-family: 'Source Serif 4', sans-serif;
    font-weight: 400;
}

#section-1 {
    background-color: #EDF5E1 !important;
    padding: 0;
    margin: 0;
}

#section-2 {
    background-color: #EDF5E1 !important;
    padding: 0;
    margin: 0;
}

#section-3 {
    background-color: #EDF5E1 !important;
    padding: 0;
    margin: 0;
}

.collapsible {
    background-color: #379683;
    color: white;
    cursor: pointer;
    padding: 0;
    width: 100%;
    border: solid #f7f7f8;
    text-align: left;
    outline: white;
    font-size: 15px;
    height: 150px;
    margin: 0;
}

.active,
.collapsible:hover {
    background-color: #5CDB95 !important;
}

.content {
    padding-left: 3px;
    padding-right: 3px;
    max-height: 0;
    overflow: scroll;
    transition: max-height 0.8s ease-out;

}

footer {
    background-color: #379683;
    height: 50px;
    text-align: center;
    font-family: 'Lusitana', sans-serif;
    font-size: 1.5rem;
    color: #ffffff;
}

#brain-image {
    float: right;
    width: 40%;
    height: 100%;
    margin-right: 20px;
    border-radius: 50%;
}

#first-para-div {
    margin: 0;
    padding-top: 20px;
    padding-bottom: 4px;
    padding-left: 10px;
    padding-right: 10px;
}

#fractions {
    text-align: center;
}

#brain {
    mix-blend-mode: multiply;
    width: 38vw;
    float: right;
    position: relative;
    left: 0vw;
    bottom: 0vw;
}

/* Nav */
nav {
    background-color: #379683;
}

.list {
    display: inline;
    margin-left: 27.5vw;
    font-size: 2.4vw;
    padding-right: 0.5vw;
    text-align: center;
}

.list a {
    color: #fafafa !important;
    text-decoration: none;
    margin-left: 4%;
    margin-right: 8%;
    font-family: 'Lusitana', serif;
    text-shadow: -1px -1px 2px #000, 1px -1px 2px #000, -1px 1px 2px #000, 1px 1px 2px #000;
}

.list a:hover {
    color: black !important;
    text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;
}


/* PAO Generator */
#PAOGenerator {
    overflow: scroll;
}

#PAOGenerator th {
    font-family: 'Lusitana', serif;
    font-size: 1.2rem;
    font-weight: 400;
}

#PAOGenerator input {
    border-radius: 5px;
}

#PDFButton {
    margin-left: 3%;
    width: fit-content;
    font-size: 2rem;
    font-family: 'Lusitana', serif;
    color: #ffffff !important;
    text-shadow: -1px -1px 2px #000, 1px -1px 2px #000, -1px 1px 2px #000, 1px 1px 2px #000;
    border-radius: 10px;
    border: none;
    background-color: #89B5AF;
}

#PDFButton:hover {
    color: #379683;
    background-color: #5CDB95 !important;
}

button {
    border-left: 0 !important;
    border-right: 0 !important;
    border-top: 1px !important;
    border-bottom: 1px !important;
    border: solid 2px white !important;
}

#pao-content {
    padding: 0 !important;
}

#button-div {
    position: relative;
    bottom: -3px;
    margin-top: 0px;
    margin-bottom: 20px;
    text-align: center;
    left: -23px;
    width: 100%;
    color: #fafafa;
}

/* Media Queries */

@media screen and (max-width: 850px) {
    #brain {
        display: none;
    }
}

@media screen and (max-width: 700px) {
    p {
        font-size: 1.2rem;
    }

    h1 {
        font-size: 2.7rem;
    }

    h2 {
        font-size: 2.4rem;
    }

    h3 {
        font-size: 2.4rem;
    }

    li {
        font-size: 1.2rem;
    }

    button {
        font-size: 2.7rem;
    }

    #number-stat {
        font-size: 1.2rem;
    }
}

@media screen and (max-width: 1000px) {
    #logo {
        font-size: 8vw;
    }

    .list {
        font-size: 4.2vw;
        margin-left: 15vw;
    }
}

